--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <button id="button">GET Friends List</button>
 
+    <button class="delete" id="button2">   <input class="delete" type="text"> Delete from Friends List </button>
+
+    <button class="add" id="addFriend"> <input class="add" type="text" id="added">Add to Friends List</button>
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
       document.getElementById("button").onclick = function () {
@@ -32,6 +36,27 @@
               '<li class="text-danger">' + err.message + "</li>";
           });
       };
+
+    // document.getElementById('button2').onclick = function () {
+    //   axios
+    //     .delete(`http://localhost:4000/api/users/${friends}`)
+    //     .then( (res) => {
+    //       const data = res.data
+    //     })
+    // }
+      
+      document.getElementById('addFriend').onclick = function() {
+        let data = {test:document.getElementById('added').value}
+        //console.log(data)
+        axios
+          .post("http://localhost:4000/api/users", data)
+          .then((response) => {
+            console.log(response.data)
+          })
+          .catch(err => {
+            console.log(err)
+          })
+      }
     </script>
   </body>
 </html>
